--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/_Liquidaciones.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/CajaGeneral/_Liquidaciones.cshtml
@@ -22,11 +22,12 @@
         settings.Columns.Add("OperadorChofer", "Chofer");
         settings.Columns.Add("UsuarioRecibe", "Cajera");
         settings.Columns.Add("FolioOperacionDia", "Folio liquidación");
-        //settings.Columns.Add("VentaTotalLitros", "Total Litros");
+        //litros venta
         settings.Columns.Add("VentaTotalContado", "De contado");
         settings.Columns.Add("VentaTotalCredito", "A credito");
-        settings.Columns.Add("VentaTotalBonificaciones", "Bonificaciones");
-        settings.Columns.Add("DescuentoTotal", "Descuentos");
+        //Bonificaciones
+        //Descuentos
+        //settings.Columns.Add("OtrasVentas", "Otras Ventas");
         settings.Columns.Add("VentaTotal", "Venta total");
     });
 }
