--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Usuarios/Nuevo.cshtml
@@ -50,7 +50,6 @@
 </style>
 @using (Html.BeginForm((ViewBag.IdUser == null) ? "GuardarUsuario" : "GuardaEdicionUsuario", "Usuarios", FormMethod.Post))
 {
-    @Html.HiddenFor(m => m.IdPais, 1)
     <section class="content home">
         <div class="container-fluid">
             <div class="row clearfix">
@@ -100,7 +99,7 @@
                            {
                                MVCxComboBox combo = s as MVCxComboBox;
                                combo.Properties.Items.Insert(0, new ListEditItem("Seleccione uno"));
-                               combo.SelectedIndex = Model.IdEmpresa;
+                               combo.SelectedIndex = Model.IdEmpresa; 
                            };
                        }).BindList(ViewBag.Empresas).GetHtml()
                             @Html.ValidationMessageFor(m => m.IdEmpresa, "", new { @class = "alert-danger" })
@@ -129,25 +128,24 @@
                                     </div>
                                 </div>
 
-                                @if (ViewBag.IdUser == null)
-                                {
+                                @if (ViewBag.IdUser == null) { 
                                     <div class="col-lg-2 col-md-2 col-sm-2">
                                         <div class="form-group float-right">
                                             E-mail:*
                                         </div>
                                     </div>
-                                    <div class="col-lg-3 col-md-3 col-sm-3">
-                                        <div class="form-group">
-                                            <input type="text" name="Email1" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser.Email1)" class="form-control">
-                                            @Html.ValidationMessageFor(m => m.Email1, "", new { @class = "alert-danger" })
-                                        </div>
+                                <div class="col-lg-3 col-md-3 col-sm-3">
+                                    <div class="form-group">
+                                        <input type="text" name="Email1" value="@((ViewBag.IdUser==null)?"":ViewBag.IdUser.Email1)" class="form-control">
+                                        @Html.ValidationMessageFor(m => m.Email1, "", new { @class = "alert-danger" })
                                     </div>
+                                </div>
 
-                                    <div class="col-lg-1 col-md-1 col-sm-1">
-                                        <div class="form-group">
-                                            <a href="javascript:void(0);" class="tip" role="button" aria-haspopup="true" aria-expanded="false"> <i class="material-icons">help</i><span>Nombre de Usuario para accesar al sistema</span></a>
-                                        </div>
+                                <div class="col-lg-1 col-md-1 col-sm-1">
+                                    <div class="form-group">
+                                        <a href="javascript:void(0);" class="tip" role="button" aria-haspopup="true" aria-expanded="false"> <i class="material-icons">help</i><span>Nombre de Usuario para accesar al sistema</span></a>
                                     </div>
+                                </div>
                                 }
                             </div>
                             <div class="row clearfix">
@@ -183,7 +181,7 @@
                                         </div>
                                     </div>
                                 }
-                            </div>
+                                </div>
                             <div class="row clearfix">
                                 <div class="col-lg-1 col-md-1 col-sm-1">
                                     <div class="form-group float-right">
@@ -356,59 +354,84 @@
                         </div>
                         <div class="body">
                             <div class="row clearfix">
-                                @*<select id="ddlPais" name="IdPais" class="form-control selectpicker z-index show-tick">
-                                    <div class="col-lg-3 col-md-3 col-sm-3">
-                                        <div class="form-group">
-                                            <label for="ddlPais">
-                                                País:*
-                                            </label>
-                                                    @if (ViewBag.IdUser == null)
+                                <div class="col-lg-3 col-md-3 col-sm-3">
+                                    <div class="form-group">
+                                        <label for="ddlPais">
+                                            País:*
+                                        </label>
+                                        @*<select id="ddlPais" name="IdPais" class="form-control selectpicker z-index show-tick">
+                                                @if (ViewBag.IdUser == null)
+                                                {
+                                                    foreach (var lst in ViewBag.ListaPaises)
                                                     {
-                                                        foreach (var lst in ViewBag.ListaPaises)
+                                                        <option value="@lst.IdPais">@lst.Pais</option>
+                                                    }
+                                                }
+                                                else
+                                                {
+                                                    foreach (var lst in ViewBag.ListaPaises)
+                                                    {
+                                                        if (ViewBag.IdUser.IdPais == lst.IdPais)
+                                                        {
+                                                            <option value="@lst.IdPais" selected>@lst.Pais</option>
+                                                        }
+                                                        else
                                                         {
                                                             <option value="@lst.IdPais">@lst.Pais</option>
                                                         }
                                                     }
-                                                    else
-                                                    {
-                                                        foreach (var lst in ViewBag.ListaPaises)
-                                                        {
-                                                            if (ViewBag.IdUser.IdPais == lst.IdPais)
-                                                            {
-                                                                <option value="@lst.IdPais" selected>@lst.Pais</option>
-                                                            }
-                                                            else
-                                                            {
-                                                                <option value="@lst.IdPais">@lst.Pais</option>
-                                                            }
-                                                        }
-                                                    }
-                                                </select>
-                                                                        @Html.DevExpress().ComboBox(settings =>
-                                                                   {
-                                                                       settings.Name = "IdPais";
-                                                                       settings.Width = 180;
-                                                                       settings.SelectedIndex = Model.IdPais;
-                                                                       settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
-                                                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                                                                       settings.Theme = "Material";
-                                                                       settings.Properties.TextField = "Pais";
-                                                                       settings.Properties.ValueField = "IdPais";
-                                                                       settings.Properties.ValueType = typeof(byte);
-                                                                       settings.ClientEnabled = true;
-                                                                       settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeCountry";
+                                                }
+                                            </select>*@
+                                        @Html.DevExpress().ComboBox(settings =>
+                                   {
+                                       settings.Name = "IdPais";
+                                       settings.Width = 180;
+                                       settings.SelectedIndex = Model.IdPais;
+                                       settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.StartsWith;
+                                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                                       settings.Theme = "Material";
+                                       settings.Properties.TextField = "Pais";
+                                       settings.Properties.ValueField = "IdPais";
+                                       settings.Properties.ValueType = typeof(byte);
+                                       settings.ClientEnabled = true;
+                                       settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedChangeCountry";
+                                     
 
-
-                                                                   }).BindList(ViewBag.ListaPaises).Bind(Model.IdPais).GetHtml()
-                                                                        @Html.ValidationMessageFor(m => m.IdPais, "", new { @class = "alert-danger"})
-                                                                    </div>
-                                                                </div>*@
+                                   }).BindList(ViewBag.ListaPaises).Bind(Model.IdPais).GetHtml()
+                                        @Html.ValidationMessageFor(m => m.IdPais, "", new { @class = "alert-danger"})
+                                    </div>
+                                </div>
                                 <div class="col-lg-3 col-md-3 col-sm-3">
                                     <div class="form-group">
                                         <label for="ddlEdo">
                                             Estado:*
                                         </label>
                                         @Html.TextBoxFor(m => m.EstadoProvincia, new { @id = "txtEdoP", @class = "form-control hid", @placeholder = "Estado" })
+                                        @*<input type="text" name="EstadoProvincia" style="display:none" id="txtEdoP" class="form-control" value="@((ViewBag.Empresas==null)?"":ViewBag.Empresas.EstadoProvincia)" />*@
+                                        @*<select name="IdEstadoRep" id="ddlEdo" class="form-control selectpicker z-index show-tick" data-live-search="true">
+                                                @if (ViewBag.IdUser == null)
+                                                {
+                                                    foreach (var lst2 in ViewBag.ListaEstados)
+                                                    {
+                                                        <option value="@lst2.IdEstadoRep">@lst2.Estado</option>
+                                                    }
+                                                }
+                                                else
+                                                {
+                                                    foreach (var lst2 in ViewBag.ListaEstados)
+                                                    {
+
+                                                        if (ViewBag.IdUser.IdEstadoRep == lst2.IdEstadoRep)
+                                                        {
+                                                            <option value="@lst2.IdEstadoRep" selected>@lst2.Estado</option>
+                                                        }
+                                                        else
+                                                        {
+                                                            <option value="@lst2.IdEstadoRep">@lst2.Estado</option>
+                                                        }
+                                                    }
+                                                }
+                                            </select>*@
                                         @Html.DevExpress().ComboBox(settings =>
                                                {
                                                    settings.Name = "IdEstadoRep";
