--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Cobranza/CarteraVencida.cshtml
@@ -126,7 +126,7 @@
                             <div class="row clearfix blockquote blockquote-info btn-round">
                                 <div class="table-responsive">
                                     @Html.Partial("_CarteraVencidaPartial", Model.reportedet)
-                                    <table class="table table-striped table-hover">
+                                    @*<table class="table table-striped table-hover">
                                         <thead>
                                             <tr>
                                                 <th>Cliente</th>
@@ -169,7 +169,7 @@
                                                 }
                                             }
                                         </tbody>
-                                    </table>
+                                    </table>*@
                                 </div>
                             </div><div style="text-align:center"><strong>Global</strong></div>
                             <div class="row clearfix blockquote blockquote-info btn-round">
