--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -219,6 +219,7 @@
                                         <li>@Html.ActionLink("Historico Ventas", "HistoricoVentas", "Historico")</li>
                                         @*<li>@Html.ActionLink("Hst. Precio de venta", "HistoricoPrecioVenta", "Reportes")</li>*@
                                     }
+
                                     @if (rol.ReporteCallCenter)
                                     {
                                         <li>@Html.ActionLink("Call Center", "CallCenter", "Reportes")</li>
@@ -227,6 +228,10 @@
                                     {
                                         <li>@Html.ActionLink("Requisición", "Requisicion", "Reportes")</li>
                                     }
+                                    @if (rol.Ventas)
+                                    {
+                                        <li>@Html.ActionLink("Ventas", "Ventas", "Reportes")</li>
+                                    }
                                     @if (rol.ReporteOrdenCompra)
                                     {
                                         <li>@Html.ActionLink("Órdenes de Compra", "OrdenCompraRep", "Reportes")</li>
@@ -234,6 +239,42 @@
                                     @if (rol.ReporteRendimientoVehicular)
                                     {
                                         <li>@Html.ActionLink("Rendimiento Vehícular", "RendimientoVehicular", "Reportes")</li>
+                                    }
+                                    @if (rol.Almacen)
+                                    {
+                                        <li>@Html.ActionLink("AutoConsumos", "AutoConsumos", "Reportes")</li>
+                                    }
+                                    @if (rol.ReporteRendimientoVehicular)
+                                    {
+                                        <li>@Html.ActionLink("Punto de Equilibrio", "RendimientoVehicularCamionetas", "Reportes")</li>
+                                    }
+                                    @if (rol.ReportePuntoVenta)
+                                    {
+                                        <li>@Html.ActionLink("Ventas por Punto de Venta", "VentasXPuntoVenta", "Reportes")</li>
+                                    }
+                                    @if (rol.Reportes)
+                                    {
+                                        <li>@Html.ActionLink("Descuentos por Clientes", "DescuentosXClientes", "Reportes")</li>
+                                    }
+                                    @if (rol.Reportes)
+                                    {
+                                        <li>@Html.ActionLink("Equipo de Transporte", "EquipoDeTransporte", "Reportes")</li>
+                                    }
+                                    @if (rol.Reportes)
+                                    {
+                                        <li>@Html.ActionLink("Crédito Recuperado", "CreditoRecuperado", "Reportes")</li>
+                                    }
+                                    @if (rol.Reportes)
+                                    {
+                                        <li>@Html.ActionLink("Crédito Otorgado", "CreditoOtorgado", "Reportes")</li>
+                                    }
+                                    @if (rol.Reportes)
+                                    {
+                                        <li>@Html.ActionLink("Crédito por cliente detallado", "CreditoXCliente", "Reportes")</li>
+                                    }
+                                    @if (rol.Reportes)
+                                    {
+                                        <li>@Html.ActionLink("Crédito por cliente Mensual", "CreditoXClienteMensual", "Reportes")</li>
                                     }
                                     @if (rol.ReporteRendimientoVehicular)
                                     {
